fix: use jwt auth token
